--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ main .main__welcome h1:after{
 }
 .form_inputs{
     display: flex;
+    flex-wrap: wrap;
 }
 input{
     width: 360px;
@@ -361,7 +362,17 @@ footer{
         }
 } 
 
-@media screen and (max-width: 1010px){
+@media screen and (max-width: 1010px) {
+    .header {
+        height: 100%;
+    }
+    header .topnav.responsive{
+        height: 100%;
+        padding-bottom: 50px;
+    }
+    .header__logo p{
+        font-size: 30px;
+    }
     .topnav a{
         display: none;
     }
@@ -370,7 +381,7 @@ footer{
         margin-top: -17px;
         display: block;
         color: #ffffff;
-        font-size: 25px;
+        font-size: 30px;
     }
     nav{
         width: 100%;
@@ -378,20 +389,18 @@ footer{
     .topnav.responsive{
         position: relative;
         top: 50px;
-        left: -200px;
-    }
-    header .topnav.responsive{
-        height: 340px;
-    }
+        left: -100px;   
+     }
     .topnav.responsive a.icon{
         position: absolute;
         top: -50px;
-        left: -200px;
+        right: 0;
     }
     .topnav.responsive a{
         float: none;
         display: block;
-        text-align: left;
+        text-align: right;
+        font-size: 30px;
     }
 
 
@@ -453,12 +462,33 @@ footer{
 
 }
 @media screen and (max-width: 950px){
-    .form_inputs{
+
+    .form_inputs {
         flex-direction: column;
         align-items: flex-start;
     }
-    input[type=text]{
+    input[type=text] {
         width: 100%;
+        font-size: 40px;
+    }
+    .form_inputs p {
+        font-size: 40px; 
+    }
+}
+
+
+@media screen and (max-width: 560px) {
+    body{
+        background: #db0000;
+    }
+    .header__logo p{
+        font-size: 40px;
+    }
+    .topnav a{
+        font-size: 50px;
+    }   
+    .topnav.responsive a{
+        font-size: 50px;
     }
 
 }
