--- a/style.css
+++ b/style.css
@@ -39,94 +39,94 @@ nav {
 .topnav a:hover {
   border-bottom: 3px solid #fcac45;
 }
-.topnav .icon{
-    display: none;
+.topnav .icon {
+  display: none;
 }
-main{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-main .main__welcome{
-    background-color: black;
-    text-align: center;
-    padding: 200px 0 410px 0;
-    }
-main .main__welcome p{
-    color: #999999;
-    font-size: 20px;
+main .main__welcome {
+  background-color: black;
+  text-align: center;
+  padding: 200px 0 410px 0;
 }
-main .main__welcome h1{
-    color: #999999;
-    font-size: 44px;
-    font-weight: lighter;
+main .main__welcome p {
+  color: #999999;
+  font-size: 20px;
 }
-main .main__welcome h1:after{
-    display: none;
+main .main__welcome h1 {
+  color: #999999;
+  font-size: 44px;
+  font-weight: lighter;
 }
-.mycompany{
-     color: #fcac45;
-     font-weight: bold;
+main .main__welcome h1:after {
+  display: none;
 }
-.text-bold{
-    font-weight: bold;
+.mycompany {
+  color: #fcac45;
+  font-weight: bold;
 }
-.wrapper{
-    width: 80%;
-    margin: 0 auto;
+.text-bold {
+  font-weight: bold;
 }
-.main__about{
-    display: flex;
-    padding: 100px 0;
+.wrapper {
+  width: 80%;
+  margin: 0 auto;
 }
-.about_right{
-    margin-left: 150px;
+.main__about {
+  display: flex;
+  padding: 100px 0;
 }
-.about_right h2{
-    display: inline-block;
-    border-bottom: 3px solid #fcac45;
-    padding-bottom: 20px;
-    font-size: 34px;
-    font-weight: normal;
+.about_right {
+  margin-left: 150px;
 }
-.about_right h1:after{
-    display: none;
+.about_right h2 {
+  display: inline-block;
+  border-bottom: 3px solid #fcac45;
+  padding-bottom: 20px;
+  font-size: 34px;
+  font-weight: normal;
 }
-.about_left img{
-    border-radius: 5%;
+.about_right h1:after {
+  display: none;
 }
-.aboutus{
-    font-weight: bolder;
+.about_left img {
+  border-radius: 5%;
 }
-.about_right p{
-    margin: 30px 0 50px 0;
-    color: #6c6c6c;
+.aboutus {
+  font-weight: bolder;
 }
-.about_right li{
-    background: url(img/mark.png) 0px no-repeat;
-    padding-left: 25px;
-    margin-top: 10px;
-    font-style: italic;
-    color: #6c6c6c;
+.about_right p {
+  margin: 30px 0 50px 0;
+  color: #6c6c6c;
 }
-.litext{
-    font-weight: bold;
-    font-style: normal;
-    color: #5a5a5a;
+.about_right li {
+  background: url(img/mark.png) 0px no-repeat;
+  padding-left: 25px;
+  margin-top: 10px;
+  font-style: italic;
+  color: #6c6c6c;
 }
-.mw-100{
-    min-width: 100%;
+.litext {
+  font-weight: bold;
+  font-style: normal;
+  color: #5a5a5a;
 }
-.main_team{
-    background-color: #000;
-    text-align: center;
-    color: #ffffff;
-    padding: 100px 0 165px 0; 
+.mw-100 {
+  min-width: 100%;
 }
-.main_team h2{
-    font-size: 44px;
-    padding-bottom: 30px;
-    font-weight: 600;
+.main_team {
+  background-color: #000;
+  text-align: center;
+  color: #ffffff;
+  padding: 100px 0 165px 0;
+}
+.main_team h2 {
+  font-size: 44px;
+  padding-bottom: 30px;
+  font-weight: 600;
 }
 /*.line{
     width: 100px;
@@ -136,359 +136,337 @@ main .main__welcome h1:after{
     left: 45.5%;
     margin-bottom: 85px;
 }*/
-.photo{
-    background: #7d7d7d;
-    width: 125px;
-    height: 125px;
-    border-radius: 50%;
-    margin: 20px auto;
+.photo {
+  background: #7d7d7d;
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  margin: 20px auto;
 }
-.team_cards{
-    display: flex;
+.team_cards {
+  display: flex;
 }
-.card{
-    margin: 0 40px;
+.card {
+  margin: 0 40px;
 }
-.name{
-    font-size: 20px;
-    margin-bottom: 7px;
-    font-weight: bold;
+.name {
+  font-size: 20px;
+  margin-bottom: 7px;
+  font-weight: bold;
 }
-.position{
-    font-size: 16px;
-    margin-bottom: 35px;
-    font-weight: normal;
+.position {
+  font-size: 16px;
+  margin-bottom: 35px;
+  font-weight: normal;
 }
-.about_position{
-    font-size: 14px;
-}
-
-.services_cards{
-    text-align: center;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 20px;
-}
-.main_services h2{
-    text-align: center;
-    padding: 100px 0 30px 0;
-    color: #222222;
-}
-.main_services p{
-    color: #6c6c6c;
-    margin-bottom: 100px;
-    font-size: 16px;
-    text-align: center;
-}
-.services_card h4{
-    margin: 20px 0 15px 0;
+.about_position {
+  font-size: 14px;
 }
 
+.services_cards {
+  text-align: center;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-column-gap: 20px;
+}
+.main_services h2 {
+  text-align: center;
+  padding: 100px 0 30px 0;
+  color: #222222;
+}
+.main_services p {
+  color: #6c6c6c;
+  margin-bottom: 100px;
+  font-size: 16px;
+  text-align: center;
+}
+.services_card h4 {
+  margin: 20px 0 15px 0;
+}
 
-.main_clients{
-    background: #000000;
-    padding: 100px 0 205px 0;
-    text-align: center;
-    color: #ffffff;
+.main_clients {
+  background: #000000;
+  padding: 100px 0 205px 0;
+  text-align: center;
+  color: #ffffff;
 }
-.main_clients h2{    
-    padding-bottom: 30px;
+.main_clients h2 {
+  padding-bottom: 30px;
 }
-.our_clients{
-    font-weight: 300;
+.our_clients {
+  font-weight: 300;
 }
-.main_clients img{
-    margin-left: 30px;
-    margin-top: 10px;    
+.main_clients img {
+  margin-left: 30px;
+  margin-top: 10px;
 }
 .main_testimonials {
-    background: #000;
-    color: #ffffff;
-    text-align: center;
-    padding: 100px 0 170px 0;
+  background: #000;
+  color: #ffffff;
+  text-align: center;
+  padding: 100px 0 170px 0;
 }
-.main_testimonials h2{
-    padding-bottom: 30px;
+.main_testimonials h2 {
+  padding-bottom: 30px;
 }
-.main_testimonials p{
-    padding-bottom: 50px;
+.main_testimonials p {
+  padding-bottom: 50px;
 }
-.main_testimonials .testimonial{
-    text-transform: uppercase;
+.main_testimonials .testimonial {
+  text-transform: uppercase;
 }
-.main_testimonials .author{
-    color: #5a5a5a;
+.main_testimonials .author {
+  color: #5a5a5a;
 }
-.main_work{
-    text-align: center;
-    padding: 100px 0;
+.main_work {
+  text-align: center;
+  padding: 100px 0;
 }
-.main_work h2{
-    padding-bottom: 30px;
+.main_work h2 {
+  padding-bottom: 30px;
 }
-.main_work p{
-    padding-bottom: 175px;
-    color: #6c6c6c;
+.main_work p {
+  padding-bottom: 175px;
+  color: #6c6c6c;
 }
-.main_work img:hover{
-    opacity: 0.9;
+.main_work img:hover {
+  opacity: 0.9;
 }
-.contact_form{
-    padding: 100px 0;
+.contact_form {
+  padding: 100px 0;
 }
-.contact_wrapper{
-    width: 753px;
-    margin: 0 auto;
-    color: #6c6c6c;
+.contact_wrapper {
+  width: 753px;
+  margin: 0 auto;
+  color: #6c6c6c;
 }
-.contact_form h2, p.intro{
-    text-align: center;
+.contact_form h2,
+p.intro {
+  text-align: center;
 }
-.contact_form h2{
-    color: black;
-    margin-bottom: 30px;
-    font-size: 44px;
+.contact_form h2 {
+  color: black;
+  margin-bottom: 30px;
+  font-size: 44px;
 }
-.contact_form p.intro{
-    margin-bottom: 100px;
-}   
-.red{
-    color: #db0000;
+.contact_form p.intro {
+  margin-bottom: 100px;
 }
-.form_inputs{
-    display: flex;
-    flex-wrap: wrap;
+.red {
+  color: #db0000;
 }
-input{
-    width: 360px;
-    height: 40px;
-    font-size: 20px;
-    margin-bottom: 30px;
+.form_inputs {
+  display: flex;
+  flex-wrap: wrap;
 }
-textarea{
-    width: 100%;
-    height: 163px;
+input {
+  width: 360px;
+  height: 40px;
+  font-size: 20px;
+  margin-bottom: 30px;
 }
-input, textarea{
-    border: 1px solid #999999;
-    margin-top: 5px;
+textarea {
+  width: 100%;
+  height: 163px;
 }
-input:first-of-type{
-    margin-right: 23px;
+input,
+textarea {
+  border: 1px solid #999999;
+  margin-top: 5px;
 }
-.button_block{
-    display: flex;
-    justify-content: flex-end;
+input:first-of-type {
+  margin-right: 23px;
 }
-input[type=submit]{
-    width: 160px;
-    height: 40px;
-    background: #fcac45;
-    color: #ffffff;
-    margin-right: 0;
-    margin-top: 20px;    
+.button_block {
+  display: flex;
+  justify-content: flex-end;
 }
-h1:after{
-    content: "";
-    display: block;
-    margin: 0 auto;
-    width: 100px;
-    padding-top: 30px;
-    border-bottom: 3px solid #fcac45;
+input[type="submit"] {
+  width: 160px;
+  height: 40px;
+  background: #fcac45;
+  color: #ffffff;
+  margin-right: 0;
+  margin-top: 20px;
 }
-h2:after{
-    content: "";
-    display: block;
-    margin: 0 auto;
-    width: 100px;
-    padding-top: 30px;
-    border-bottom: 3px solid #fcac45;
+h1:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+  padding-top: 30px;
+  border-bottom: 3px solid #fcac45;
 }
-footer{
-    width: 100%;
-    height: auto;
-    background: #222222;
-    padding: 30px 0;
+h2:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+  padding-top: 30px;
+  border-bottom: 3px solid #fcac45;
 }
-.social{
-    display: flex;
-    justify-content: center;
+footer {
+  width: 100%;
+  height: auto;
+  background: #222222;
+  padding: 30px 0;
 }
-.social img{
-    margin-left: 12px;
+.social {
+  display: flex;
+  justify-content: center;
 }
-.social img:hover{
-    opacity: 0.7;
+.social img {
+  margin-left: 12px;
+}
+.social img:hover {
+  opacity: 0.7;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 1200px){
-    nav{
-        margin-left: 20%;
-    }
-} 
-@media screen and (max-width: 1105px){
-    nav{
-        margin-left: 10%;
-        }
-} 
+@media screen and (max-width: 1200px) {
+  nav {
+    margin-left: 20%;
+  }
+}
+@media screen and (max-width: 1105px) {
+  nav {
+    margin-left: 10%;
+  }
+}
 
 @media screen and (max-width: 1010px) {
-    .header {
-        height: 100%;
-    }
-    header .topnav.responsive{
-        height: 100%;
-        padding-bottom: 50px;
-    }
-    .header__logo p{
-        font-size: 30px;
-    }
-    .topnav a{
-        display: none;
-    }
-    .topnav a.icon{
-        float: right;
-        margin-top: -17px;
-        display: block;
-        color: #ffffff;
-        font-size: 30px;
-    }
-    nav{
-        width: 100%;
-    }
-    .topnav.responsive{
-        position: relative;
-        top: 50px;
-        left: -100px;   
-     }
-    .topnav.responsive a.icon{
-        position: absolute;
-        top: -50px;
-        right: 0;
-    }
-    .topnav.responsive a{
-        float: none;
-        display: block;
-        text-align: right;
-        font-size: 30px;
-    }
+  .header {
+    height: 100%;
+  }
+  header .topnav.responsive {
+    height: 100%;
+    padding-bottom: 50px;
+  }
+  .header__logo p {
+    font-size: 30px;
+  }
+  .topnav a {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    margin-top: -17px;
+    display: block;
+    color: #ffffff;
+    font-size: 30px;
+  }
+  nav {
+    width: 100%;
+  }
+  .topnav.responsive {
+    position: relative;
+    top: 50px;
+    left: -100px;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    top: -50px;
+    right: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+    font-size: 30px;
+  }
 
+  main .main__welcome {
+    padding: 50px 0;
+  }
+  main .main__welcome p {
+    font-size: 14px;
+  }
+  main .main__welcome h1 {
+    font-size: 25px;
+  }
+  .mw-100 {
+    max-width: 100%;
+  }
+  .main__about {
+    flex-direction: column;
+  }
+  .about_right {
+    text-align: center;
+    margin-left: 0;
+  }
+  .about_right li {
+    text-align: left;
+  }
+  .about_right h2 {
+    margin-top: 10px;
+    font-size: 20px;
+  }
 
+  .team_cards {
+    flex-direction: column;
+  }
+  .services_cards {
+    grid-template-columns: auto;
+  }
+  .line1 img:not(:first-child) {
+    display: none;
+  }
+  .line2 img:not(:first-child) {
+    display: none;
+  }
+  .line3 img:not(:first-child) {
+    display: none;
+  }
+  .contact_wrapper {
+    width: 80%;
+  }
+  form {
+    margin-left: 15px;
+  }
+}
+@media screen and (max-width: 950px) {
+  .form_inputs {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  input[type="text"] {
+    width: 100%;
+    font-size: 40px;
+  }
+  .form_inputs p {
+    font-size: 40px;
+  }
+  .message{
+      font-size: 40px;
+  }
+}
 
-
-
-    main .main__welcome{
-        padding: 50px 0;
-    }
-    main .main__welcome p{
-        font-size: 14px;
-    }
-    main .main__welcome h1{
-        font-size: 25px;
-    }
-    .mw-100{
-        max-width: 100% ;
-    }
-    .main__about{
-        flex-direction: column;
-    }
-    .about_right{
-        text-align: center;
-        margin-left: 0;
-    }
-    .about_right li{
-        text-align: left;
-    }
-    .about_right h2{
-        margin-top: 10px;
-        font-size: 20px;
-    }
-
-
-
-
-    .team_cards{
-        flex-direction: column;
-    }
-    .services_cards{
-        grid-template-columns: auto;
-    }
-    .line1 img:not(:first-child){
-        display: none;
-    }
-    .line2 img:not(:first-child){
-        display: none;
-    }
-    .line3 img:not(:first-child){
-        display: none;
-    }
-    .contact_wrapper{
-        width: 80%;
-    }
-    form{
-        margin-left: 15px;
-    }
+@media screen and (max-width: 750px) {
+    .header__logo {
+    margin-top: 30px;
+    margin-left: 10%;
+  }
+  .header__logo p{
+    font-size: 30px;
+  }
+  nav {
+    width: 100%;
+  }
+  .topnav a.icon {
+    margin-top: -45px;
+    font-size: 40px;
+  }
+  .topnav.responsive {
+    position: relative;
+    top: 50px;
+    left: -200px;
+  }
+  .topnav.responsive a {
+    font-size: 35px;
+    text-align: left;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    
+  }
  
-
-}
-@media screen and (max-width: 950px){
-
-    .form_inputs {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    input[type=text] {
-        width: 100%;
-        font-size: 40px;
-    }
-    .form_inputs p {
-        font-size: 40px; 
-    }
-}
-
-
-@media screen and (max-width: 560px) {
-    body{
-        background: #db0000;
-    }
-    .header__logo p{
-        font-size: 40px;
-    }
-    .topnav a{
-        font-size: 50px;
-    }   
-    .topnav.responsive a{
-        font-size: 50px;
-    }
-
 }
